# rtrash

./: .gitignore  .lychee.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  asv.conf.json  cog.toml  deny.toml  dist-workspace.toml  flake.nix  prek.toml  pyproject.toml  towncrier.toml
.config/: nextest.toml
.github/workflows/: ci.yml  ci_bench_commenter.yml  ci_benchmark.yml  ci_prek.yml  doc_commenter.yml  docs.yml  pre_commit.yml  release-musl.yml  release.yml
benches/: compare_trash_cli.py
benchmarks/: __init__.py  trash_ops.py
completions/: _rtrash  rtrash.bash  rtrash.fish
contrib/mc/: menu.rtrash
docs/: SOTA.md  architecture.md  benchmarks.md  bindings.md  build.sh  export.el  getting-started.md  requirements.txt
docs/demo/: README.md  record.sh  rtrash-quickstart.cast  sequence-suite.sh  sequence.sh
docs/newsfragments/: +bench-refresh.dev.md  +ci-quality-bar.dev.md  +docs-demo.added.md  +interactive-restore.added.md  +list-status-json-age.added.md  +macos-fdo-experimental.added.md  +mc-menu-sample.added.md  +nextest-dist-asv.dev.md  +python-gil.fixed.md  +release-tooling.dev.md  +restore-tui.added.md  +script-pins-json.added.md  +tui-keybinds.added.md  +tui-multi-fuzzy-put-empty.added.md  +tui-ux-sota.changed.md  +windows-recycle.added.md
docs/orgmode/: architecture.org  benchmarks.org  bindings.org  getting-started.org  index.org
docs/scripts/: export_org_to_rst.sh  fix_doc_links.py
docs/source/: CNAME  conf.py
docs/source/_static/: custom.css
docs/source/_static/demo/: rtrash-suite.cast
docs/source/_templates/partials/: extra-head.html  site-foot.html
man/: rtrash.1
scripts/: check-version-lockstep.sh  dist-pr-only-release-yml.sh  package-release.sh  quality.sh
src/: empty.rs  empty_tui.rs  fastdelete.rs  info.rs  lib.rs  list.rs  main.rs  platform.rs  put.rs  put_tui.rs  python.rs  restore.rs  restore_tui.rs  rm.rs  setup.rs  status.rs  trashdir.rs  tui_binds.rs  tui_fuzzy.rs  tui_keys.rs  tui_list.rs  tui_select.rs  tui_term.rs  util.rs  win_recycle.rs
tests/: ci_quality.rs  cli.rs  docs_assets.rs  docs_demo.rs  install_metadata.rs  platform_matrix.rs  python_gil.rs  tui_logic.rs  tui_ux.rs
tests/python/: test_rtrash.py
